--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
   <body>
     <div class="container">
       <header class="header">
-        <div class="web_logo">
-          <img src="./imgs/Logo.png" alt="logo" />
+        <div>
+          <img class="web_logo" src="./imgs/Logo.png" alt="logo" />
         </div>
         <nav class="navigations">
           <ul class="navigation_list">
             <li class="navigation_link">
-              <a href="#">About</a>
+              <a href="#1">About</a>
             </li>
             <li class="navigation_link">
-              <a href="#">Features</a>
+              <a href="#2">Features</a>
             </li>
             <li class="navigation_link">
-              <a href="#">Pricing</a>
+              <a href="#3">Pricing</a>
             </li>
             <li class="navigation_link">
-              <a href="#">Testimonials</a>
+              <a href="#4">Testimonials</a>
             </li>
             <li class="navigation_link">
               <a href="#">Help</a>
@@ -41,18 +41,19 @@
           <button class="signin">Sign In</button>
           <button class="signup">sign up</button>
         </div>
-        <label for="menu" class="burger__menu__label">
+       <label for="menu" class="burger__menu__label">
           <div class="burger__menu__bar"></div>
           <div class="burger__menu__bar"></div>
           <div class="burger__menu__bar"></div>
         </label>
-        <input type="checkbox" id="menu" class="burger__menu">
-        
+        <input type="checkbox" id="menu" class="burger__menu"> 
+
+
       </header>
-      <section class="section">
+      <section class="section" id="1">
         <div class="section__content">
           <h1 class="title">
-            Want anything to be <br>easy with <strong>LaslesVPN.</strong>
+            Want anything to be easy with <strong>LaslesVPN.</strong>
           </h1>
           <p class="section__details">
             Provide a network for all your needs with ease and fun using
@@ -68,7 +69,7 @@
           />
         </div>
       </section>
-      <section class="section">
+      <section class="section" id="2">
         <div class="main">
           <div class="component">
             <img src="./imgs/user.png" alt="user-icon" class="img__icon" />
@@ -97,10 +98,10 @@
           </div>
         </div>
       </section>
-      <section class="section">
+      <section class="section" id="3">
         <div class="img__content">
           <img
-            class="section__img"
+            class="section__img__two"
             src="./imgs/Illustration 2.png"
             alt="pic-one"
           />
@@ -286,7 +287,7 @@
         </div>
       </div>
 
-      <div class="section">
+      <div class="section" id="4">
         <div class="reviow__box">
           <div class="information__title">
             <img
@@ -380,7 +381,7 @@
             <img class="footer_icons" src="./imgs/Twitter.png" alt="">
             <img class="footer_icons" src="./imgs/Instagram.png" alt="">
            </div>
-           <h3 class="footer_description">©2020LaslesVPN</h3>
+           <h3 class="copyright">©2020LaslesVPN</h3>
           </div>
           <div class="column">
             <h1 class="footer_title">Product</h1>
